# virtual-assistant

./: .user-settings  CMakeLists.txt  Makefile  README.md  assistant_utils.cpp  main_assistant.cpp  record.cpp  string_utils.hpp  vitual_assistant
apps/: CMakeLists.txt  Makefile  main.cc  main.cpp
data/: note.txt
docs/: CMakeLists.txt  Doxyfile.docs  Makefile  cmake_install.cmake
include/: assistant_object.h  assistant_object.hpp  block_chain.hpp  eye_object.hpp  parameter.h  parameter.hpp
src/: CMakeLists.txt  Makefile  assistant_object.cc  assistant_object.cpp  assistant_object.h  assistant_utils.cc  assistant_utils.h  block_chain.cpp  eye_object.cpp  main_assistant.cc  parameter.h  record.h  string_utils.cc  virtual_functions.cc  virtual_functions.h
